Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 6.2.0 FF
-
Fix Version/s: 6.1.1, 6.2.0 Alpha
-
Component/s: QPA: Wayland
-
Labels:None
-
Commits:6aab3cbba0f9df3141cafd571f621610c94eaf1c (qt/qtwayland/dev) 65e8b69228ea5d72a923a98385b7814555225eba (qt/qtwayland/6.1)
Description
deprecated: Handle QPaintEvent instead [-Wdeprecated-declarations] agent:2021/05/13 00:26:16 build.go:391: 86 | if (exposeEvent->region().isNull()) agent:2021/05/13 00:26:16 build.go:391: | ^ agent:2021/05/13 00:26:16 build.go:391: In file included from /home/qt/work/install/include/QtGui/QPlatformSurfaceEvent:1, agent:2021/05/13 00:26:16 build.go:391: from /home/qt/work/qt/qtwayland/examples/wayland/custom-extension/client-common/customextension.cpp:54: agent:2021/05/13 00:26:16 build.go:391: /home/qt/work/install/include/QtGui/qevent.h:567:27: note: declared here agent:2021/05/13 00:26:16 build.go:391: 567 | inline const QRegion ®ion() const { return m_region; } agent:2021/05/13 00:26:16 build.go:391: | ^~~~~~ agent:2021/05/13 00:26:17 build.go:391: make[3]: Leaving directory '/home/qt/work/qt/qtwayland_qmake/examples/wayland/custom-extension/qml-client' agent:2021/05/13 00:26:17 build.go:391: make[2]: *** [Makefile:49: sub-qml-client-make_first] Error 2 agent:2021/05/13 00:26:17 build.go:391: make[2]: *** Waiting for unfinished jobs....
Details: https://testresults.qt.io/coin/integration/qt/qtwayland/tasks/1620864780
Tested changes (refs/builds/qtci/dev/1620864779):
https://codereview.qt-project.org/c/qt/qtwayland/+/349204/1 Update dependencies on 'dev' in qt/qtwayland
Attachments
Issue Links
- is duplicated by
-
QTBUG-93637 Fix use of deprecated API in wayland/custom-extension example
-
- Closed
-