Don't use deprecated API

QExposeEvent::region() is deprecated.

Fixes: QTBUG-93751
Pick-to: 6.1
Change-Id: Idaff6fdc4c88e70696ba0074e26db3505c48b9d0
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: David Edmundson <davidedmundson@kde.org>